2009-04-29  Alan Modra  <amodra@bigpond.net.au>

	* deffilep.y (STACKSIZE_K): Rename from STACKSIZE.

2009-04-25  Alan Modra  <amodra@bigpond.net.au>

     	PR 10061
	* genscripts.sh: Don't pass $EMULATION_NAME as $CUSTOMIZER_SCRIPT
	param.

2009-04-21  Daniel Jacobowitz  <dan@codesourcery.com>

	* emultempl/armelf.em (bfd_for_interwork, arm_elf_after_open)
	(arm_elf_set_bfd_for_interworking): Delete.
	(arm_elf_before_allocation): Do not set the interworking BFD.
	Move allocation inside not-dynamic block.
	(arm_elf_create_output_section_statements): Create glue sections
	and set the interworking BFD here.
	(LDEMUL_AFTER_OPEN): Delete.

2009-04-16  Richard Sandiford  <r.sandiford@uk.ibm.com>

	* ldlang.c (lang_one_common): Use bfd_define_common_symbol.

2009-04-15  Anthony Green  <green@moxielogic.com>

	* configure.tgt: Add moxie support.
	* Makefile.am: Add moxie files.
	* Makefile.in: Rebuilt.
	* emulparams/elf32moxie.sh: New file.
	* scripttempl/moxie.sc: New file.

2009-04-15  Kazu Hirata  <kazu@codesourcery.com>

	* ldlang.c: Do not include limits.h.

2009-04-14  Alan Modra  <amodra@bigpond.net.au>

	PR ld/10047
	* ldfile.c (find_scripts_dir): Use make_relative_prefix to find
	ldscripts in build tree.  Don't repeat search for ../lib/ldscripts.

2009-04-13  H.J. Lu  <hongjiu.lu@intel.com>

	* ldfile.c (ldfile_find_command_file): Revert the last change.

2009-04-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/10047
	* ldfile.c (ldfile_find_command_file): First try raw name.

2009-04-09  Nick Clifton  <nickc@redhat.com>

	PR 9824
	* ld.texinfo (Output Section Constraint): New node.  Documents the
	ONLY_IF_RO and ONLY_IF_RW constraints.
	(Symbolic Constants): New node.  Documents the CONSTANT operator.

2009-04-09  Thilo Fischer <thilo.fischer@uni-muenster.de>

	* emultempl/spuelf.em (embedded_spu_file): Use pex_one in place
	of fork/execvp.

2009-04-08  H.J. Lu  <hongjiu.lu@intel.com>

	* lexsup.c (option_values): Add OPTION_WARN_ALTERNATE_EM.